0.40
        Recent Changes now shows changes in the past 24 hours, past week,
          past fortnight, and past 30 days.

0.39    15 September 2004
        Split commit_node out into OpenGuides.pm in preparation for spam filter
        Added option of using Plucene for searching.  If you want to do this
          (and it is recommended over the default of Search::InvertedIndex)
          you will need to do two things:
            - either delete your old indexes (they're just files in the index
              directory) or use a different index directory
            - reindex your entire wiki (see reindex.pl in the examples/
              directory of this distribution)

0.38    26 July 2004
        Major improvements to the search result ordering (thanks to
          Steve Jolly, Bob Walker and Billy Abbott for test cases).

0.37    23 July 2004
        Fixed bug in diff view - the versions are the right way round now...
          Fixed bug with links in historic view.  Require CGI.pm 2.92 to
          avoid escapeHTML bug.

0.36    13 July 2004
        Added diff link to node template. Fixed case sensitivity bug in
          index node autocreation.  Fixed bug with node history comments
          not being HTML-escaped.

0.35    25 June 2004
        Forgot to add version prerequisite on CGI::Wiki.  Don't use 0.34,
          use this.

0.34    25 June 2004
        Add facility to delete only certain revisions of a page - access
          this from the node history page.

0.33    20 June 2004
        Improve node history page to allow diffing between each version and
          the previous one or the current one.
        Test overhauls - you don't need to run the configuration step in
          order to run the tests now, but you do need to have DBD::SQLite
          for most of them.
        Fixed template bug in display_metadata.tt that was stopping map
          links being displayed for nodes with no address data (spotted
          by Steve Jolly).