@@ -30,6 +30,7 @@ sub set_preferences {
     my $omit_hlplnks = $cgi->param("omit_help_links")        || 0;
     my $rc_minor_eds = $cgi->param("show_minor_edits_in_rc") || 0;
     my $edit_type    = $cgi->param("default_edit_type") || "normal";
+    my $expires      = $cgi->param("cookie_expires") || "month";
     my $cookie = OpenGuides::CGI->make_prefs_cookie(
         config => $config,
         username => $username,
@@ -39,6 +40,7 @@ sub set_preferences {
         omit_help_links        => $omit_hlplnks,
         show_minor_edits_in_rc => $rc_minor_eds,
         default_edit_type      => $edit_type,
+        cookie_expires         => $expires,
     );
     print OpenGuides::Template->output(
         wiki     => $wiki,
@@ -54,6 +56,7 @@ sub set_preferences {
                       omit_help_links        => $omit_hlplnks,
                       show_minor_edits_in_rc => $rc_minor_eds,
                       default_edit_type      => $edit_type,
+                      cookie_expires         => $expires,
                     }
     );
 }
